# mups

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.h  dz1z1.c  dz1z2.c  dz1z3.c  dz1z4.c  dz1z5.c  nesto  test
dz1/: CMakeLists.txt
dz1/histogram/: histo  run
dz1/tpacf/: model_compute_cpu.c  model_io.c  run  utils.c
dz2/: CMakeLists.txt  common.h  compile.sh  dz2z1.c  dz2z2.c  dz2z3.c  dz2z4.c  dz2z5.c  nekioutput.txt  out_large.txt  out_medium.txt  rundz1.sh  rundz2.sh  rundz3.sh  rundz4.sh  rundz5.sh
dz2/heated_plate/: heated_plate.c  run
dz2/quad/: quad  quad.c
dz2/quad2/: quad2
dz2/tpacf/: Makefile  args.h  main.c  model.h
dz3/: common.h  compile.sh  dz3z1.cu  dz3z2.cu  dz3z3.cu  out_large.txt  out_medium.txt  out_small.txt  rundz1.sh  rundz2.sh  rundz3.sh
dz3/heated_plate/: Makefile
dz3/quad2/: Makefile  quad2.c  run
histogram/: Makefile  histo  main.c  utils.h
quad/: Makefile  run
tpacf/: args.c  out_small.txt  tpacf
